# trainer

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docker-deploy.yml  tox.yml
.tools-cfg/: .isort.cfg  black-cfg.toml
trainer/: consumer.py  models.py
