[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trainer"
description = "No code data science platform model trainer service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.1",
    "scikit-learn==1.2.2",
    "pika==1.3.2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["engine"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
